<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WiFi Direct_GO</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Send File to all</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="start_rec">File receiver</string>
    <string name="stop_rec">Stop receiver</string>
    <string name="label_peers">PEERS</string>
    <string name="start_broad">Start Broadcasting</string>
       <string name="chat">Chat server</string>
       <string name="chat_msg">Chat server running to exit type \'bye\'</string>
    <string name="Button_chat">Send</string>
</resources>
